2002-02-25  Sergey Chaban  <serge@wildwestsoftware.com>
	* configure.in: added support for ARM target arch.
	Uncommented and modified arm-*-linux* target,
	added mono/arch/arm/Makefile to AC_OUTPUT list.

2002-02-21  Mark Crichton  <crichton@gimp.org>

	* status/class.xml: Added contact info for RNGCryptoServiceProvider
	class and Rijndael classes.
	* status/maintainers.xml: Added contact info to maintainers list.

2002-02-21  Mark Crichton  <crichton@gimp.org>
 
        * configure.in: Add checks for a system-provided entropy device
        * acconfig.h: Added HAVE_CRYPT_RNG and NAME_DEV_RANDOM

2002-02-20  Dick Porter  <dick@ximian.com>

	* acconfig.h:
	* configure.in: Always build without cygwin support on windows

2002-02-19  Radek Doulik  <rodo@ximian.com>

	* mono/tests/pinvoke.cs: use more pinvoke test methods

2002-02-19  Radek Doulik  <rodo@ximian.com>

	* mono/tests/libtest.c (mono_test_many_short_arguments): new test
	method
	(mono_test_many_byte_arguments): ditto

2002-02-18  Radek Doulik  <rodo@ximian.com>

	* mono/tests/Makefile.am: added small test library for pinvoke
	testing

	* mono/tests/libtest.c (mono_test_many_int_arguments): new file,
	new function to test pinvoke

	* mono/tests/pinvoke.cs (Test): added pinvoked method with 10 int
	arguments

	* mono/tests/Makefile.am: display # of passing tests too
	added simple shared library libtest with testing function for
	pinvoke

2002-02-17  Radek Doulik  <rodo@ximian.com>

	* mono/tests/Makefile.am (test): display # of failed tests

2002-02-16  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Add checks for SOL_IP, SOL_TCP, and
	IP_PKTINFO. Also check for struct ip_mreqn.

2002-02-14  Jeffrey Stedfast  <fejj@ximian.com>

	* configure.in: Add checks to see if we need to link to libsocket,
	libnsl, and/or librt. Also check for inet_pton and inet_aton.

2002-02-13  Jeffrey Stedfast  <fejj@ximian.com>

	* acconfig.h: #undef USE_MONO_MUTEX
